# mm

./: .gitignore  cnf.hpp  lin.cpp  lin.hpp
net/: CMakeLists.txt  net.cpp  net.hpp
net/acts/: CMakeLists.txt  acts.cpp  acts.hpp
net/layers/: CMakeLists.txt  dense.cpp  dense.hpp  layer.hpp
net/loss/: CMakeLists.txt  loss.cpp  loss.hpp
